--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G1_impact_of_partitioning.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G1_impact_of_partitioning.yaml
@@ -30,13 +30,13 @@ microbenchmark:
             - DROP TABLE IF EXISTS projects_hr;
             - DROP TABLE IF EXISTS projects_default;
 
-            - create table projects_with_part (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
+            - create table projects_with_part (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
             - CREATE TABLE projects_sales PARTITION OF projects_with_part FOR VALUES IN ('Sales');
             - CREATE TABLE projects_eng PARTITION OF projects_with_part FOR VALUES IN ('Engineering');
             - CREATE TABLE projects_hr PARTITION OF projects_with_part FOR VALUES IN ('HR');
             - CREATE TABLE projects_default PARTITION OF projects_with_part DEFAULT;
 
-            - create table projects_without_part (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
+            - create table projects_without_part (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
         cleanup:
             - DROP TABLE IF EXISTS projects_with_part;
             - DROP TABLE IF EXISTS projects_without_part;
@@ -50,6 +50,9 @@ microbenchmark:
               rows: 100000
               columns:
                   - name: id
+                    util: PrimaryIntGen
+                    params: [1, 100000]
+                  - name: uid
                     util: PrimaryIntGen
                     params: [1, 100000]
                   - name: name
@@ -66,6 +69,9 @@ microbenchmark:
               rows: 100000
               columns:
                   - name: id
+                    util: PrimaryIntGen
+                    params: [1, 100000]
+                  - name: uid
                     util: PrimaryIntGen
                     params: [1, 100000]
                   - name: name
@@ -139,10 +145,8 @@ microbenchmark:
                   - name: update_with_part
                     weight: 100
                     queries:
-                        - query: update projects_with_part set dept=? where id=?;
+                        - query: update projects_with_part set uid=uid+1 where id=?;
                           bindings:
-                            - util: OneStringFromArray
-                              params: ['Sales','Engineering','HR','Anonymous']
                             - util: RandomInt
                               params: [1, 100000]
 
@@ -151,10 +155,8 @@ microbenchmark:
                   - name: update_without_part
                     weight: 100
                     queries:
-                        - query: update projects_without_part set dept=? where id=?;
+                        - query: update projects_without_part set uid=uid+1 where id=?;
                           bindings:
-                            - util: OneStringFromArray
-                              params: ['Sales','Engineering','HR','Anonymous']
                             - util: RandomInt
                               params: [1, 100000]
 
