--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G11_list_impact_of_multiple_part_ops.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G11_list_impact_of_multiple_part_ops.yaml
@@ -117,8 +117,10 @@ microbenchmark:
                   - name: insert_with_part
                     weight: 100
                     queries:
-                        - query: insert into projects_with_part values(?,?,?,?);
+                        - query: insert into projects_with_part values(?,?,?,?,?);
                           bindings:
+                              - util: PrimaryIntGen
+                                params: [100001, 500000]
                               - util: PrimaryIntGen
                                 params: [100001, 500000]
                               - util: RandomAString
@@ -133,8 +135,10 @@ microbenchmark:
                   - name: insert_without_part
                     weight: 100
                     queries:
-                        - query: insert into projects_without_part values(?,?,?,?);
+                        - query: insert into projects_without_part values(?,?,?,?,?);
                           bindings:
+                              - util: PrimaryIntGen
+                                params: [100001, 500000]
                               - util: PrimaryIntGen
                                 params: [100001, 500000]
                               - util: RandomAString
